Sprint 00-13: Advanced WHERE expression engine