@@ -2,12 +2,25 @@ package com.yekdb.query.command;
 
 import com.yekdb.query.expression.Expression;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
 /**
  * Execution katmanında kullanılacak UPDATE komutudur.
+ *
+ * Sprint 00-13 kapsamında WHERE alanı gelişmiş
+ * Expression AST yapısını destekler.
+ *
+ * Desteklenen WHERE yapıları:
+ *
+ * - Comparison
+ * - AND
+ * - OR
+ * - NOT
+ * - Parentheses
+ * - Operator precedence
  */
 public final class UpdateCommand implements Command {
 
@@ -15,6 +28,11 @@ public final class UpdateCommand implements Command {
 
     private final Map<String, Object> updatedValues;
 
+    /**
+     * WHERE expression ağacı.
+     *
+     * WHERE yoksa null olabilir.
+     */
     private final Expression whereExpression;
 
     public UpdateCommand(
@@ -37,6 +55,7 @@ public final class UpdateCommand implements Command {
         );
 
         if (updatedValues.isEmpty()) {
+
             throw new IllegalArgumentException(
                     "UPDATE command must contain at least one value."
             );
@@ -45,8 +64,13 @@ public final class UpdateCommand implements Command {
         this.tableName =
                 tableName.trim();
 
+        /*
+         * SET sırasını korumak ve dışarıdan mutation
+         * yapılmasını engellemek için immutable
+         * LinkedHashMap görünümü oluşturulur.
+         */
         this.updatedValues =
-                Map.copyOf(
+                Collections.unmodifiableMap(
                         new LinkedHashMap<>(
                                 updatedValues
                         )
@@ -57,18 +81,32 @@ public final class UpdateCommand implements Command {
     }
 
     public String getTableName() {
+
         return tableName;
     }
 
     public Map<String, Object> getUpdatedValues() {
+
         return updatedValues;
     }
 
     public Expression getWhereExpression() {
+
         return whereExpression;
     }
 
     public boolean hasWhereExpression() {
+
         return whereExpression != null;
+    }
+
+    @Override
+    public String toString() {
+
+        return "UpdateCommand{" +
+                "tableName='" + tableName + '\'' +
+                ", updatedValues=" + updatedValues +
+                ", whereExpression=" + whereExpression +
+                '}';
     }
 }
